--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="https://static.wikia.nocookie.net/suits/images/d/da/S8_Harvey_Specter.jpg/revision/latest/scale-to-width-down/324?cb=20180731195449" alt="Kingsley's new profile"></td>
+        <td><img src="images/kingsley.png.jpg" alt="Kingsley's new profile"></td>
         <td>  <h1>Kingsley</h1>
           <p><em>Pharmacy student<strong>School of Pharmacy, Agulu</strong></em>.</p>
           <p><em>Faculty of Pharmaceutical Sciences<strong> <a href="https://unizik.edu.ng/">Nnamdi Azikiwe University</a></strong></em>.</p>
